youfull/objects/Coaching_Header_Items__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>List of items used for calculation.</description>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_To_Map__c</fullName>
        <description>api name</description>
        <label>Field_To_Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <label>KEY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALUE__c</fullName>
        <label>VALUE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Coaching Header Items</label>
</CustomObject>